# onlineexam

./: README.md  samplecode.py  tests.py
mysite/: Requirements.txt  backup.json  commands  db (DESKTOP-GKVTH41's conflicted copy 2016-06-06).sqlite3  db.sqlite3  db_test.sqlite3  excel upload.xlsx  git bash.sh  guake.sh  new test file  question.xlsx  schedule  schedule.txt  test.sh
mysite/Resource/: exam1.xlsx
mysite/Resource/Default  Html page/: index.html
mysite/Resource/Selected text j querry/: example.html
mysite/announcement/: admin.py  models.py  urls.py  views.py
mysite/blog/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
mysite/dashboard/: urls.py  views.py
mysite/django-ckeditor-5.0.3/: setup.cfg
mysite/exam/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
mysite/feedback/: admin.py  models.py  urls.py  views.py
mysite/links/: admin.py  models.py  urls.py  views.py
mysite/mysite/: settings (DESKTOP-GKVTH41's conflicted copy 2016-05-28).py  settings (DESKTOP-GKVTH41's conflicted copy 2016-06-06).py  settings.py  urls.py
mysite/notice/: admin.py  models.py  urls.py  views.py
mysite/polls/: admin.py  models.py  urls.py  views.py
mysite/practicing/: exam1.xlsx  python1.py  run.bash
mysite/qa1/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mysite/question/: admin.py  forms.py  models.py  tests.py  urls.py  views.py  views_1.py
mysite/readingmaterial/: admin.py  apps.py  models.py  urls.py  views.py  views_ajax.py
mysite/subscription/: admin.py  models.py  urls.py  views.py
(+258 files in other folders)
