[metadata]
license-file = LICENSE

[wheel]
universal = 1

[pep8]
max_line_length = 120

[flake8]
exclude = build,.git,docs,migrations,.tox
max-line-length = 120
statistics = true
count = true
show-source = true

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = ckeditor
multi_line_output = 5
not_skip = __init__.py
skip = migrations, .tox

[coverage:run]
source = ckeditor
branch = True

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

